[package]
name = "bevy_procedural_terrain_gen"
version = "0.0.0"
edition = "2024"

[lib]
name = "bevy_procedural_terrain_gen"
path = "src/lib.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"

[dependencies]
bevy = { workspace = true }
bevy_panorbit_camera = { workspace = true }
bevy_egui = { workspace = true }
log = { workspace = true }
noise = { workspace = true }
serde = { workspace = true }
